--- a/index - Copy.html
+++ b/index - Copy.html
@@ -1361,7 +1361,7 @@ footer {
         <h2 class="section-title">🍕 Pizzas</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 7.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Pepperoni Pizza</div>
                     <div class="item-description">30 cm / 40 cm</div>
@@ -1383,7 +1383,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 3.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 3.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Qazi (Horse Sausage) Pizza</div>
                     <div class="item-description">30 cm / 40 cm</div>
@@ -1394,7 +1394,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 4.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 4.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Margarita Pizza</div>
                     <div class="item-description">30 cm / 40 cm</div>
@@ -1405,7 +1405,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 5.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 5.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Assorted Pizza</div>
                     <div class="item-description">30 cm / 40 cm</div>
@@ -1416,7 +1416,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 6.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 6.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Meat Pizza</div>
                     <div class="item-description">30 cm / 40 cm</div>
@@ -1433,7 +1433,7 @@ footer {
         <h2 class="section-title">🌯 Lavash</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 8.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 7.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash (Large)</div>
                     <div class="item-description">Medium spicy</div>
@@ -1441,7 +1441,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 9.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 8.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Cheese Lavash (Large)</div>
                      <div class="item-description">Sour sweet</div>
@@ -1449,7 +1449,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 10.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 7.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash Mini</div>
                      <div class="item-description">Favorite meal</div>
@@ -1457,7 +1457,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 9.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 8.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Cheese Lavash Mini</div>
                      <div class="item-description">Wide selection</div>
@@ -1465,7 +1465,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 8.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 9.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Spicy Lavash</div>
                      <div class="item-description">Wide selection</div>
@@ -1479,7 +1479,7 @@ footer {
         <h2 class="section-title">🌮 Shawarmas</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 15.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 10.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Shawarma Large</div>
                     <div class="item-description">Medium spicy</div>
@@ -1487,7 +1487,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 16.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 11.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Shawarma (Large)</div>
                     <div class="item-description">Favorite meal</div>
@@ -1495,7 +1495,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 15.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 12.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Shawarma Mini</div>
                     <div class="item-description">Favorite meal</div>
@@ -1503,7 +1503,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 17.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 13.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Haggi</div>
                     <div class="item-description">Wide selection</div>
@@ -1517,7 +1517,7 @@ footer {
         <h2 class="section-title">🍔 Burgers and Hot-Dogs</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 11.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 200px;" src="img/image copy 14.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Hamburger</div>
                     <div class="item-description">Medium spicy / sour sweet</div>
@@ -1525,7 +1525,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 12.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 250px;" src="img/image copy 15.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Cheeseburger</div>
                     <div class="item-description">Medium spicy</div>
@@ -1533,7 +1533,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 13.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 16.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Hot-Dog</div>
                     <div class="item-description">Cheese sauce</div>
@@ -1541,7 +1541,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 14.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 17.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Classic Hot-Dog</div>
                     <div class="item-description">Wide selection</div>
@@ -1555,35 +1555,35 @@ footer {
         <h2 class="section-title">🍗 Main Meals and Snacks</h2>
         <div class="menu-grid">
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 18.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 18.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Club Sandwich</div>
                     <div class="price">35.000 so'm</div>
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 19.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img  style="width: 300px;" src="img/image copy 19.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Doner Plate</div>
                     <div class="price">47.000 so'm</div>
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 20.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 20.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Chicken Wings</div>
                     <div class="price">34.000 so'm</div>
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 21.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 21.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Strips</div>
                     <div class="price">32.000 so'm</div>
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 22.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 22.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">French Fries</div>
                     <div class="price">17.000 so'm</div>
