--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@ footer {
         <h2 class="section-title">🍕 Pitsalar</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 7.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Pitssa Pepperoni</div>
                     <div class="item-description">30 sm / 40 sm</div>
@@ -1358,7 +1358,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 3.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 3.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Pitssa Qazili</div>
                     <div class="item-description">30 sm / 40 sm</div>
@@ -1369,7 +1369,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 4.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 4.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Pitssa Margarita</div>
                     <div class="item-description">30 sm / 40 sm</div>
@@ -1380,7 +1380,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 5.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 5.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Pitssa Assorti</div>
                     <div class="item-description">30 sm / 40 sm</div>
@@ -1391,7 +1391,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 6.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 6.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Pitssa Go'shtli</div>
                     <div class="item-description">30 sm / 40 sm</div>
@@ -1408,7 +1408,7 @@ footer {
         <h2 class="section-title">🌯 Lavashlar</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 8.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 7.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash (Katta)</div>
                     <div class="item-description">O'rtacha achchiq</div>
@@ -1416,7 +1416,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 9.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 8.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash Pishloqli (Katta)</div>
                      <div class="item-description">Nordon shirin</div>
@@ -1424,7 +1424,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 10.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 7.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash Mini</div>
                      <div class="item-description">Sevimli tanovul</div>
@@ -1432,7 +1432,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 9.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 8.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash Mini Pishloqli</div>
                      <div class="item-description">Keng tanlov</div>
@@ -1440,7 +1440,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 8.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 270px;" src="img/image copy 9.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Lavash Achchiq</div>
                      <div class="item-description">Keng tanlov</div>
@@ -1454,7 +1454,7 @@ footer {
         <h2 class="section-title">🌮 Shaurmalar</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 15.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 10.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Shaurma Katta</div>
                     <div class="item-description">O'rtacha achchiq</div>
@@ -1462,7 +1462,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 16.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 11.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Shaurma (Katta)</div>
                     <div class="item-description">Sevimli tanovul</div>
@@ -1470,7 +1470,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 15.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 12.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Shaurma Mini</div>
                     <div class="item-description">Sevimli tanovul</div>
@@ -1478,7 +1478,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 17.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 13.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Xaggi</div>
                     <div class="item-description">Keng tanlov</div>
@@ -1492,7 +1492,7 @@ footer {
         <h2 class="section-title">🍔 Burger va Hot-Doglar</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 11.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 200px;" src="img/image copy 14.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Gamburger</div>
                     <div class="item-description">O'rtacha achchiq / nordon shirin</div>
@@ -1500,7 +1500,7 @@ footer {
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 12.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 250px;" src="img/image copy 15.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Chizburger</div>
                     <div class="item-description">O'rtacha achchiq</div>
@@ -1508,7 +1508,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 13.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 16.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Hot-Dog</div>
                     <div class="item-description">Pishloqli sous</div>
@@ -1516,7 +1516,7 @@ footer {
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 14.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 17.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Klassik Hot-Dog</div>
                     <div class="item-description">Keng tanlov</div>
@@ -1530,35 +1530,35 @@ footer {
         <h2 class="section-title">🍗 Asosiy Taomlar va Gazaklar</h2>
         <div class="menu-grid">
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 18.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 18.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Klab Sendvich</div>
                     <div class="price">35.000 so'm</div>
                 </div>
             </div>
              <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 19.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 19.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Donar Blyudo</div>
                     <div class="price">47.000 so'm</div>
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 20.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 20.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Tovuq qanotchalari</div>
                     <div class="price">34.000 so'm</div>
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 21.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 21.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Striplar</div>
                     <div class="price">32.000 so'm</div>
                 </div>
             </div>
             <div class="menu-item">
-                <div class="item-image" style="font-size: 70px;"><img src="img/image copy 22.png" alt=""></div>
+                <div class="item-image" style="font-size: 70px;"><img style="width: 300px;" src="img/image copy 22.png" alt=""></div>
                 <div class="item-content">
                     <div class="item-name">Kartofel Fri</div>
                     <div class="price">17.000 so'm</div>
